Added default values for syslog outputs (TCP) and GPG key type (RSA).

--- a/staticFiles/rpfwd.configspec.ini
+++ b/staticFiles/rpfwd.configspec.ini
@@ -4,7 +4,7 @@
 [GPG]
 	sendpubkey=string(default=None,min=1,max=4096)
 	keysize=integer(min=1024,max=65536,default=4096)
-	keytype=option('DSA','RSA')
+	keytype=option('DSA','RSA',default='RSA')
 	keypasswd=string(default=None,min=16,max=2048)
 
 [FileForward]
@@ -32,7 +32,7 @@
 	[[__many__]]
 		target=string(default=None,min=1,max=4096)
 		port=integer(default=514,min=1,max=65535)
-		proto=option('TCP','UDP')
+		proto=option('TCP','UDP',default='UDP')
 
 
 		
