--- a/initialCfgDir/rpfwd.ini
+++ b/initialCfgDir/rpfwd.ini
@@ -37,10 +37,12 @@
 	# This section can be repeated as many times as needed. Each must have a
 	# unique section title. 
 	[[targetname1]]
-		target=someurl
+		# Where to send the file
 		#target=scp://someuserontarget@someserver.example.org:/var/log/received/
 		#target=ftp://someuserontarget@someserver.example.org:/received/
 		#target=email://someuserontarget@someserver.example.org
+		target=someurl
+		
 		# Perform the below on the file before sending it
 		gzipcompress=True
 		gpgsign=True
