Finished a first draft of the GPG initial S&C

--- a/initialCfgDir/rpfwd.ini
+++ b/initialCfgDir/rpfwd.ini
@@ -27,8 +27,14 @@
 	# Don't define or leave blank to randomly generate one on first boot
 	# FIXME: Change this so it's not world readable or something
 	keypasswd=
+	# The location where the gpg keys and related files should be kept. 
+	# keydir=/var/lib/rpfwd
+	# The key ID to use when signing and/or encrypting files. If blank, a 
+	# new key will be created. If set, the key must already exist in the 
+	# keydir keyring. 
+	# keyid=515F3A02CAD72C50
 
-
+	
 ## File forwarding settings
 [FileForward]
 	# TODO: Allow host keys to be entered for the remote system
