--- a/staticFiles/rpfwd.configspec.ini
+++ b/staticFiles/rpfwd.configspec.ini
@@ -6,6 +6,8 @@
 	keysize=integer(min=1024,max=65536,default=4096)
 	keytype=option('DSA','RSA',default='RSA')
 	keypasswd=string(default=None,min=16,max=2048)
+	keyid=string(default=None,min=4,max=1024)
+	keydir=string(default='/var/lib/rpfwd/',min=1,max=8192)
 
 [FileForward]
 	[[__many__]]
